Update pom to use slf4j logging library and java 12